Ensure that rank histogram statistics are always plotted (only compute rank histogram (and other) statistics when there are some pairs and also use a less-opinionated representation of emptiness for the rank histogram).
Fixes #92140